--- a/index.html
+++ b/index.html
@@ -46,16 +46,47 @@
                 <div>
                     <input type="image" img src="search.png" name=".search" id="searc">
                 </div>
-                <div class="registration">
-                    <a href="https://en.wikipedia.org/wiki/Main_Page" id="formbutton">REGISTRATION FORM</a>
+
+                <div class="boxesss">
+
+                    <div class="dot">
+                        <div class="one"></div>
+                        <div class="one"></div>
+                        <div class="one"></div>
+                    </div>
+                    <div class="dot">
+                        <div class="one"></div>
+                        <div class="one"></div>
+                        <div class="one"></div>
+                    </div>
+                    <div class="dot">
+                        <div class="one"></div>
+                        <div class="one"></div>
+                        <div class="one"></div>
+                    </div>
+
                 </div>
+
+
+            </div>
+
+            <div class="registration">
+                <a href="https://en.wikipedia.org/wiki/Main_Page" id="formbutton">REGISTRATION FORM</a>
             </div>
         </div>
+    </div>
 
     </div>
     <div class="contcontainer">
         <h1 id="texth">A Digital Marketing Company in Chandigarh with a Difference </h1>
         <h1 id="texth"> and Proven Expertise.</h1>
+
+
+    </div>
+
+    <div class="conttcontainer">
+        <h1 id="texthh">A Digital Marketing Company in Chandigarh with a Difference and Proven Expertise. </h1>
+
 
 
     </div>
@@ -264,23 +295,23 @@
         <div class="mid">
             <!-- <div class="midsecond"> -->
 
-                <div class="bx">
-                    <p id="ltext">What are the factors used to classify social networks for marketers?
-                    </p>
+            <div class="bx">
+                <p id="ltext">What are the factors used to classify social networks for marketers?
+                </p>
 
-                </div>
+            </div>
 
-                <div class="bx">
-                    <p id="ltext">Llama Code Generation: Unlocking the Potential of Your Code</p>
+            <div class="bx">
+                <p id="ltext">Llama Code Generation: Unlocking the Potential of Your Code</p>
 
-                </div>
+            </div>
 
 
 
-                <div class="bx">
-                    <p id="ltext">How can IT Services Help Improve Brand Growth?</p>
+            <div class="bx">
+                <p id="ltext">How can IT Services Help Improve Brand Growth?</p>
 
-                </div>
+            </div>
             <!-- </div> -->
         </div>
 
@@ -311,14 +342,18 @@
 
     <div class="eightcontainer">
 
+
         <div class="lefteight">
             <div>
                 <img src="ktlastlogo.png">
-            </div> 
-            
+            </div>
+
 
             <div class="notess">
-                <p>Empowering the digital frontier through cutting-edge solutions, Kreativan Technologies sparks innovation, drives progress, and shapes a dynamic future with passion, precision, and relentless commitment to excellence. We are the architects of digital transformation. With visionary solutions, we shape tomorrow's world today.</p>
+                <p>Empowering the digital frontier through cutting-edge solutions, Kreativan Technologies sparks
+                    innovation, drives progress, and shapes a dynamic future with passion, precision, and relentless
+                    commitment to excellence. We are the architects of digital transformation. With visionary solutions,
+                    we shape tomorrow's world today.</p>
 
             </div>
 
@@ -334,11 +369,16 @@
 
         </div>
 
+
+
+
+
         <div class="secondeight">
 
             <div class="contact">CONTACT US</div>
             <div class="email"><span class="spannew">Email-</span>Kreativantech@gmail.com</div>
-            <div class="addresss"><span class="spannew">Address-</span>Aeren Building, Plot No. 14, IT Park Rd, opposite Infosys, Phase - I, Sector 13, Chandigarh, Panchkula, Chandigarh 160101</div>
+            <div class="addresss"><span class="spannew">Address-</span>Aeren Building, Plot No. 14, IT Park Rd, opposite
+                Infosys, Phase - I, Sector 13, Chandigarh, Panchkula, Chandigarh 160101</div>
             <div class="tel"> <span class="spannew">Tel-</span> 8264470355</div>
             <div class="socialmedia">facebook</div>
 
@@ -356,6 +396,7 @@
 
 
         </div>
+
 
     </div>
 
